calc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> creation
Rule 1     creation -> define_module set_parameters set_architecture end_module
Rule 2     define_module -> DEFINE MOD_NAME LKEY
Rule 3     end_module -> RKEY END MOD_NAME
Rule 4     set_parameters -> PARAMETERS COLON parameters_exp parameters_exp parameters_exp
Rule 5     parameters_exp -> input EQUALS NUMBER
Rule 6     parameters_exp -> output EQUALS NUMBER
Rule 7     parameters_exp -> width EQUALS NUMBER
Rule 8     set_architecture -> ARCHITECTURE COLON arch_expresions
Rule 9     arch_expresions -> arch_expresion
Rule 10    arch_expresions -> arch_expresion arch_expresions
Rule 11    arch_expresion -> node_exp
Rule 12    arch_expresion -> edge_exp
Rule 13    arch_expresion -> connect_exp
Rule 14    node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN
Rule 15    edge_exp -> edge ID LPAREN NUMBER RPAREN
Rule 16    connect_exp -> connect LPAREN ID OUT_PORT COMA ID RPAREN
Rule 17    connect_exp -> connect LPAREN ID COMA ID IN_PORT RPAREN
Rule 18    connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN
Rule 19    connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN

Terminals, with rules where they appear

ARCHITECTURE         : 8
COLON                : 4 8
COMA                 : 16 17 18 19
COMMENT              : 
DEFINE               : 2
END                  : 3
EQUALS               : 5 6 7 14
ID                   : 14 15 16 16 17 17 18 19
IN_PORT              : 17 18 18
LKEY                 : 2
LPAREN               : 14 15 16 17 18 19
MOD_NAME             : 2 3 14
NUMBER               : 5 6 7 14 15
OUT_PORT             : 16 19 19
PARAMETERS           : 4
RKEY                 : 3
RPAREN               : 14 15 16 17 18 19
connect              : 16 17 18 19
edge                 : 15
error                : 
input                : 5
node                 : 14
output               : 6
this                 : 18 19
width                : 7

Nonterminals, with rules where they appear

arch_expresion       : 9 10
arch_expresions      : 8 10
connect_exp          : 13
creation             : 0
define_module        : 1
edge_exp             : 12
end_module           : 1
node_exp             : 11
parameters_exp       : 4 4 4
set_architecture     : 1
set_parameters       : 1

Parsing method: LALR

state 0

    (0) S' -> . creation
    (1) creation -> . define_module set_parameters set_architecture end_module
    (2) define_module -> . DEFINE MOD_NAME LKEY

    DEFINE          shift and go to state 3

    creation                       shift and go to state 1
    define_module                  shift and go to state 2

state 1

    (0) S' -> creation .



state 2

    (1) creation -> define_module . set_parameters set_architecture end_module
    (4) set_parameters -> . PARAMETERS COLON parameters_exp parameters_exp parameters_exp

    PARAMETERS      shift and go to state 5

    set_parameters                 shift and go to state 4

state 3

    (2) define_module -> DEFINE . MOD_NAME LKEY

    MOD_NAME        shift and go to state 6


state 4

    (1) creation -> define_module set_parameters . set_architecture end_module
    (8) set_architecture -> . ARCHITECTURE COLON arch_expresions

    ARCHITECTURE    shift and go to state 8

    set_architecture               shift and go to state 7

state 5

    (4) set_parameters -> PARAMETERS . COLON parameters_exp parameters_exp parameters_exp

    COLON           shift and go to state 9


state 6

    (2) define_module -> DEFINE MOD_NAME . LKEY

    LKEY            shift and go to state 10


state 7

    (1) creation -> define_module set_parameters set_architecture . end_module
    (3) end_module -> . RKEY END MOD_NAME

    RKEY            shift and go to state 12

    end_module                     shift and go to state 11

state 8

    (8) set_architecture -> ARCHITECTURE . COLON arch_expresions

    COLON           shift and go to state 13


state 9

    (4) set_parameters -> PARAMETERS COLON . parameters_exp parameters_exp parameters_exp
    (5) parameters_exp -> . input EQUALS NUMBER
    (6) parameters_exp -> . output EQUALS NUMBER
    (7) parameters_exp -> . width EQUALS NUMBER

    input           shift and go to state 15
    output          shift and go to state 16
    width           shift and go to state 17

    parameters_exp                 shift and go to state 14

state 10

    (2) define_module -> DEFINE MOD_NAME LKEY .

    PARAMETERS      reduce using rule 2 (define_module -> DEFINE MOD_NAME LKEY .)


state 11

    (1) creation -> define_module set_parameters set_architecture end_module .

    $end            reduce using rule 1 (creation -> define_module set_parameters set_architecture end_module .)


state 12

    (3) end_module -> RKEY . END MOD_NAME

    END             shift and go to state 18


state 13

    (8) set_architecture -> ARCHITECTURE COLON . arch_expresions
    (9) arch_expresions -> . arch_expresion
    (10) arch_expresions -> . arch_expresion arch_expresions
    (11) arch_expresion -> . node_exp
    (12) arch_expresion -> . edge_exp
    (13) arch_expresion -> . connect_exp
    (14) node_exp -> . node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN
    (15) edge_exp -> . edge ID LPAREN NUMBER RPAREN
    (16) connect_exp -> . connect LPAREN ID OUT_PORT COMA ID RPAREN
    (17) connect_exp -> . connect LPAREN ID COMA ID IN_PORT RPAREN
    (18) connect_exp -> . connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN
    (19) connect_exp -> . connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN

    node            shift and go to state 24
    edge            shift and go to state 25
    connect         shift and go to state 26

    arch_expresions                shift and go to state 19
    arch_expresion                 shift and go to state 20
    node_exp                       shift and go to state 21
    edge_exp                       shift and go to state 22
    connect_exp                    shift and go to state 23

state 14

    (4) set_parameters -> PARAMETERS COLON parameters_exp . parameters_exp parameters_exp
    (5) parameters_exp -> . input EQUALS NUMBER
    (6) parameters_exp -> . output EQUALS NUMBER
    (7) parameters_exp -> . width EQUALS NUMBER

    input           shift and go to state 15
    output          shift and go to state 16
    width           shift and go to state 17

    parameters_exp                 shift and go to state 27

state 15

    (5) parameters_exp -> input . EQUALS NUMBER

    EQUALS          shift and go to state 28


state 16

    (6) parameters_exp -> output . EQUALS NUMBER

    EQUALS          shift and go to state 29


state 17

    (7) parameters_exp -> width . EQUALS NUMBER

    EQUALS          shift and go to state 30


state 18

    (3) end_module -> RKEY END . MOD_NAME

    MOD_NAME        shift and go to state 31


state 19

    (8) set_architecture -> ARCHITECTURE COLON arch_expresions .

    RKEY            reduce using rule 8 (set_architecture -> ARCHITECTURE COLON arch_expresions .)


state 20

    (9) arch_expresions -> arch_expresion .
    (10) arch_expresions -> arch_expresion . arch_expresions
    (9) arch_expresions -> . arch_expresion
    (10) arch_expresions -> . arch_expresion arch_expresions
    (11) arch_expresion -> . node_exp
    (12) arch_expresion -> . edge_exp
    (13) arch_expresion -> . connect_exp
    (14) node_exp -> . node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN
    (15) edge_exp -> . edge ID LPAREN NUMBER RPAREN
    (16) connect_exp -> . connect LPAREN ID OUT_PORT COMA ID RPAREN
    (17) connect_exp -> . connect LPAREN ID COMA ID IN_PORT RPAREN
    (18) connect_exp -> . connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN
    (19) connect_exp -> . connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN

    RKEY            reduce using rule 9 (arch_expresions -> arch_expresion .)
    node            shift and go to state 24
    edge            shift and go to state 25
    connect         shift and go to state 26

    arch_expresion                 shift and go to state 20
    arch_expresions                shift and go to state 32
    node_exp                       shift and go to state 21
    edge_exp                       shift and go to state 22
    connect_exp                    shift and go to state 23

state 21

    (11) arch_expresion -> node_exp .

    node            reduce using rule 11 (arch_expresion -> node_exp .)
    edge            reduce using rule 11 (arch_expresion -> node_exp .)
    connect         reduce using rule 11 (arch_expresion -> node_exp .)
    RKEY            reduce using rule 11 (arch_expresion -> node_exp .)


state 22

    (12) arch_expresion -> edge_exp .

    node            reduce using rule 12 (arch_expresion -> edge_exp .)
    edge            reduce using rule 12 (arch_expresion -> edge_exp .)
    connect         reduce using rule 12 (arch_expresion -> edge_exp .)
    RKEY            reduce using rule 12 (arch_expresion -> edge_exp .)


state 23

    (13) arch_expresion -> connect_exp .

    node            reduce using rule 13 (arch_expresion -> connect_exp .)
    edge            reduce using rule 13 (arch_expresion -> connect_exp .)
    connect         reduce using rule 13 (arch_expresion -> connect_exp .)
    RKEY            reduce using rule 13 (arch_expresion -> connect_exp .)


state 24

    (14) node_exp -> node . ID EQUALS MOD_NAME LPAREN NUMBER RPAREN

    ID              shift and go to state 33


state 25

    (15) edge_exp -> edge . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 34


state 26

    (16) connect_exp -> connect . LPAREN ID OUT_PORT COMA ID RPAREN
    (17) connect_exp -> connect . LPAREN ID COMA ID IN_PORT RPAREN
    (18) connect_exp -> connect . LPAREN this IN_PORT COMA ID IN_PORT RPAREN
    (19) connect_exp -> connect . LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN

    LPAREN          shift and go to state 35


state 27

    (4) set_parameters -> PARAMETERS COLON parameters_exp parameters_exp . parameters_exp
    (5) parameters_exp -> . input EQUALS NUMBER
    (6) parameters_exp -> . output EQUALS NUMBER
    (7) parameters_exp -> . width EQUALS NUMBER

    input           shift and go to state 15
    output          shift and go to state 16
    width           shift and go to state 17

    parameters_exp                 shift and go to state 36

state 28

    (5) parameters_exp -> input EQUALS . NUMBER

    NUMBER          shift and go to state 37


state 29

    (6) parameters_exp -> output EQUALS . NUMBER

    NUMBER          shift and go to state 38


state 30

    (7) parameters_exp -> width EQUALS . NUMBER

    NUMBER          shift and go to state 39


state 31

    (3) end_module -> RKEY END MOD_NAME .

    $end            reduce using rule 3 (end_module -> RKEY END MOD_NAME .)


state 32

    (10) arch_expresions -> arch_expresion arch_expresions .

    RKEY            reduce using rule 10 (arch_expresions -> arch_expresion arch_expresions .)


state 33

    (14) node_exp -> node ID . EQUALS MOD_NAME LPAREN NUMBER RPAREN

    EQUALS          shift and go to state 40


state 34

    (15) edge_exp -> edge ID . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 41


state 35

    (16) connect_exp -> connect LPAREN . ID OUT_PORT COMA ID RPAREN
    (17) connect_exp -> connect LPAREN . ID COMA ID IN_PORT RPAREN
    (18) connect_exp -> connect LPAREN . this IN_PORT COMA ID IN_PORT RPAREN
    (19) connect_exp -> connect LPAREN . ID OUT_PORT COMA this OUT_PORT RPAREN

    ID              shift and go to state 42
    this            shift and go to state 43


state 36

    (4) set_parameters -> PARAMETERS COLON parameters_exp parameters_exp parameters_exp .

    ARCHITECTURE    reduce using rule 4 (set_parameters -> PARAMETERS COLON parameters_exp parameters_exp parameters_exp .)


state 37

    (5) parameters_exp -> input EQUALS NUMBER .

    input           reduce using rule 5 (parameters_exp -> input EQUALS NUMBER .)
    output          reduce using rule 5 (parameters_exp -> input EQUALS NUMBER .)
    width           reduce using rule 5 (parameters_exp -> input EQUALS NUMBER .)
    ARCHITECTURE    reduce using rule 5 (parameters_exp -> input EQUALS NUMBER .)


state 38

    (6) parameters_exp -> output EQUALS NUMBER .

    input           reduce using rule 6 (parameters_exp -> output EQUALS NUMBER .)
    output          reduce using rule 6 (parameters_exp -> output EQUALS NUMBER .)
    width           reduce using rule 6 (parameters_exp -> output EQUALS NUMBER .)
    ARCHITECTURE    reduce using rule 6 (parameters_exp -> output EQUALS NUMBER .)


state 39

    (7) parameters_exp -> width EQUALS NUMBER .

    input           reduce using rule 7 (parameters_exp -> width EQUALS NUMBER .)
    output          reduce using rule 7 (parameters_exp -> width EQUALS NUMBER .)
    width           reduce using rule 7 (parameters_exp -> width EQUALS NUMBER .)
    ARCHITECTURE    reduce using rule 7 (parameters_exp -> width EQUALS NUMBER .)


state 40

    (14) node_exp -> node ID EQUALS . MOD_NAME LPAREN NUMBER RPAREN

    MOD_NAME        shift and go to state 44


state 41

    (15) edge_exp -> edge ID LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 45


state 42

    (16) connect_exp -> connect LPAREN ID . OUT_PORT COMA ID RPAREN
    (17) connect_exp -> connect LPAREN ID . COMA ID IN_PORT RPAREN
    (19) connect_exp -> connect LPAREN ID . OUT_PORT COMA this OUT_PORT RPAREN

    OUT_PORT        shift and go to state 46
    COMA            shift and go to state 47


state 43

    (18) connect_exp -> connect LPAREN this . IN_PORT COMA ID IN_PORT RPAREN

    IN_PORT         shift and go to state 48


state 44

    (14) node_exp -> node ID EQUALS MOD_NAME . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 49


state 45

    (15) edge_exp -> edge ID LPAREN NUMBER . RPAREN

    RPAREN          shift and go to state 50


state 46

    (16) connect_exp -> connect LPAREN ID OUT_PORT . COMA ID RPAREN
    (19) connect_exp -> connect LPAREN ID OUT_PORT . COMA this OUT_PORT RPAREN

    COMA            shift and go to state 51


state 47

    (17) connect_exp -> connect LPAREN ID COMA . ID IN_PORT RPAREN

    ID              shift and go to state 52


state 48

    (18) connect_exp -> connect LPAREN this IN_PORT . COMA ID IN_PORT RPAREN

    COMA            shift and go to state 53


state 49

    (14) node_exp -> node ID EQUALS MOD_NAME LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 54


state 50

    (15) edge_exp -> edge ID LPAREN NUMBER RPAREN .

    node            reduce using rule 15 (edge_exp -> edge ID LPAREN NUMBER RPAREN .)
    edge            reduce using rule 15 (edge_exp -> edge ID LPAREN NUMBER RPAREN .)
    connect         reduce using rule 15 (edge_exp -> edge ID LPAREN NUMBER RPAREN .)
    RKEY            reduce using rule 15 (edge_exp -> edge ID LPAREN NUMBER RPAREN .)


state 51

    (16) connect_exp -> connect LPAREN ID OUT_PORT COMA . ID RPAREN
    (19) connect_exp -> connect LPAREN ID OUT_PORT COMA . this OUT_PORT RPAREN

    ID              shift and go to state 55
    this            shift and go to state 56


state 52

    (17) connect_exp -> connect LPAREN ID COMA ID . IN_PORT RPAREN

    IN_PORT         shift and go to state 57


state 53

    (18) connect_exp -> connect LPAREN this IN_PORT COMA . ID IN_PORT RPAREN

    ID              shift and go to state 58


state 54

    (14) node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER . RPAREN

    RPAREN          shift and go to state 59


state 55

    (16) connect_exp -> connect LPAREN ID OUT_PORT COMA ID . RPAREN

    RPAREN          shift and go to state 60


state 56

    (19) connect_exp -> connect LPAREN ID OUT_PORT COMA this . OUT_PORT RPAREN

    OUT_PORT        shift and go to state 61


state 57

    (17) connect_exp -> connect LPAREN ID COMA ID IN_PORT . RPAREN

    RPAREN          shift and go to state 62


state 58

    (18) connect_exp -> connect LPAREN this IN_PORT COMA ID . IN_PORT RPAREN

    IN_PORT         shift and go to state 63


state 59

    (14) node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN .

    node            reduce using rule 14 (node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN .)
    edge            reduce using rule 14 (node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN .)
    connect         reduce using rule 14 (node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN .)
    RKEY            reduce using rule 14 (node_exp -> node ID EQUALS MOD_NAME LPAREN NUMBER RPAREN .)


state 60

    (16) connect_exp -> connect LPAREN ID OUT_PORT COMA ID RPAREN .

    node            reduce using rule 16 (connect_exp -> connect LPAREN ID OUT_PORT COMA ID RPAREN .)
    edge            reduce using rule 16 (connect_exp -> connect LPAREN ID OUT_PORT COMA ID RPAREN .)
    connect         reduce using rule 16 (connect_exp -> connect LPAREN ID OUT_PORT COMA ID RPAREN .)
    RKEY            reduce using rule 16 (connect_exp -> connect LPAREN ID OUT_PORT COMA ID RPAREN .)


state 61

    (19) connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT . RPAREN

    RPAREN          shift and go to state 64


state 62

    (17) connect_exp -> connect LPAREN ID COMA ID IN_PORT RPAREN .

    node            reduce using rule 17 (connect_exp -> connect LPAREN ID COMA ID IN_PORT RPAREN .)
    edge            reduce using rule 17 (connect_exp -> connect LPAREN ID COMA ID IN_PORT RPAREN .)
    connect         reduce using rule 17 (connect_exp -> connect LPAREN ID COMA ID IN_PORT RPAREN .)
    RKEY            reduce using rule 17 (connect_exp -> connect LPAREN ID COMA ID IN_PORT RPAREN .)


state 63

    (18) connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT . RPAREN

    RPAREN          shift and go to state 65


state 64

    (19) connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN .

    node            reduce using rule 19 (connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN .)
    edge            reduce using rule 19 (connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN .)
    connect         reduce using rule 19 (connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN .)
    RKEY            reduce using rule 19 (connect_exp -> connect LPAREN ID OUT_PORT COMA this OUT_PORT RPAREN .)


state 65

    (18) connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN .

    node            reduce using rule 18 (connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN .)
    edge            reduce using rule 18 (connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN .)
    connect         reduce using rule 18 (connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN .)
    RKEY            reduce using rule 18 (connect_exp -> connect LPAREN this IN_PORT COMA ID IN_PORT RPAREN .)

